<resources>
    <string name="app_name">E-demy</string>
    <string name="welcum">Welcome to E-demy</string>
    <string name="login">Log in or sign up to save your progress as you work through courses on E-demy</string>
    <string name="signup">Sign up</string>
    <string name="have_account">Already have an account?</string>
    <string name="signin">Sign in</string>
    <string name="here">Here you can look up the courses you interested in.</string>
    <string name="anth">You can learn anything</string>
    <string name="supp">E-demy supports many artists though the world.</string>
    <string name="saved">Saved</string>
    <string name="math">Math</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="art">art</string>
    <string name="languages">Languages</string>
    <string name="art2">Art</string>
    <string name="Select">Select course</string>
    <string name="home">home</string>
    <string name="find">find</string>
    <string name="no_saves">No saves</string>
    <string name="search">Search</string>
    <string name="back">back</string>
    <string name="welcum_2">Welcome</string>
    <string name="settings">settings</string>
    <string name="google">Continue with Google</string>
    <string name="apple">Continue with Apple</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="en">English</string>
    <string name="english">English</string>
    <string name="mastery_points">Mastery Points</string>
    <string name="_0_12_0">0/12 (0%)</string>
    <string name="basics_1">Basics 1</string>
    <string name="phrases_and_animals">Phrases and Animals</string>
    <string name="food_and_family">Food and Family</string>
    <string name="transport_shopping">Transport/Shopping</string>
    <string name="basics_2">Basics 2</string>
    <string name="_0_1">0/1</string>
    <string name="second_lesson">Second Lesson</string>
    <string name="first_lesson">First Lesson</string>
    <string name="intro">Intro</string>
    <string name="travel_activities">Travel/Activities</string>
    <string name="at_work_1">At Work 1</string>
    <string name="hotel">Hotel</string>
    <string name="irish">Irish</string>
    <string name="japanese">Japanese</string>
    <string name="french">French</string>
    <string name="es">Spanish</string>
    <string name="ru">Russian</string>
    <string name="chi">Chinese</string>
    <string name="po">Portuguese</string>
</resources>