<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:contentDescription="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/welcum_2"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageButton
                android:contentDescription="@string/settings"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="180dp"
                android:background="@color/white"
                android:src="@drawable/settings" />


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb1">

        <Button
            android:layout_width="325dp"
            android:layout_height="55dp"
            android:background="@drawable/shape3"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:gravity="center"/>

        <Button
            android:layout_width="325dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape4"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/apple"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:gravity="center"/>

        <Button
            android:layout_width="325dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape5"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bb3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/ll15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll15"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:contentDescription="@string/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="45dp"
                    android:background="@color/white"
                    android:src="@drawable/home"/>

                <ImageButton
                    android:contentDescription="@string/find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="45dp"
                    android:background="@color/white"
                    android:src="@drawable/find"/>

                <ImageButton
                    android:contentDescription="@string/saved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="45dp"
                    android:background="@color/white"
                    android:src="@drawable/saved"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>